lendo os dados - simulaçaão

--- a/acp_decatlo.html
+++ b/acp_decatlo.html
@@ -141,7 +141,7 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
     <div>
     <div class="quarto-title-meta-heading">Data de Publicação</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">19 de outubro de 2024</p>
+      <p class="date">10 de dezembro de 2024</p>
     </div>
   </div>
   
@@ -224,7 +224,7 @@ McMULLEN        4.42    56.37  285.1    8   7995    Decastar</code></pre>
 <h1 data-number="4"><span class="header-section-number">4</span> Análise de Componentes Principais</h1>
 <section id="realizando-a-pca" class="level2" data-number="4.1">
 <h2 data-number="4.1" class="anchored" data-anchor-id="realizando-a-pca"><span class="header-section-number">4.1</span> Realizando a PCA</h2>
-<p>Aplicamos a função <code>PCA</code> do pacote <code>FactoMineR</code> para executar a análise.</p>
+<p>Aplicamos a função <code>PCA</code> do pacote <code>FactoMineR</code> para executar a análise. Esta função já faz a padronização das variáveis automaticamente.</p>
 <div class="cell">
 <details class="code-fold">
 <summary>Código</summary>
